--- a/teacher.html
+++ b/teacher.html
@@ -13,15 +13,16 @@
 
   <script>
     // THAY cấu hình này bằng thông tin Firebase của bạn
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "SENDER_ID",
-      appId: "APP_ID"
-    };
+  const firebaseConfig = {
+  apiKey: "AIzaSyB-ST5U4VSxraEGKl3INjGKKdl9Dik5bg0",
+  authDomain: "giaiphong2025-697c5.firebaseapp.com",
+  databaseURL: "https://giaiphong2025-697c5-default-rtdb.firebaseio.com",
+  projectId: "giaiphong2025-697c5",
+  storageBucket: "giaiphong2025-697c5.firebasestorage.app",
+  messagingSenderId: "205746810625",
+  appId: "1:205746810625:web:ec05b354a6221f7b3af500",
+  measurementId: "G-1ZXJDGYPME"
+};
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
