--- a/teacher.html
+++ b/teacher.html
@@ -18,7 +18,7 @@
   authDomain: "giaiphong2025-697c5.firebaseapp.com",
   databaseURL: "https://giaiphong2025-697c5-default-rtdb.firebaseio.com",
   projectId: "giaiphong2025-697c5",
-  storageBucket: "giaiphong2025-697c5.firebasestorage.app",
+ storageBucket: "giaiphong2025-697c5.appspot.com"
   messagingSenderId: "205746810625",
   appId: "1:205746810625:web:ec05b354a6221f7b3af500",
   measurementId: "G-1ZXJDGYPME"
