--- a/student/index.html
+++ b/student/index.html
@@ -1,1 +1,189 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <title>Học sinh trả lời</title>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+      margin-bottom: 20px;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+    }
+    #options button {
+      font-size: 20px;
+      padding: 10px 20px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      background-color: #4CAF50;
+      color: white;
+      cursor: pointer;
+    }
+    #options button.selected {
+      background-color: #f39c12;
+    }
+    #options button.disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+    #countdown {
+      font-size: 24px;
+      color: red;
+      margin-bottom: 20px;
+    }
+    #loginArea {
+      margin-bottom: 20px;
+    }
+    #loginArea input {
+      padding: 10px;
+      font-size: 18px;
+    }
+    #loginArea button {
+      padding: 10px 20px;
+      font-size: 18px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+
+<h2>🎯 Hệ thống trả lời câu hỏi</h2>
+
+<!-- Phần nhập tên -->
+<div id="loginArea">
+  <h3>Nhập tên học sinh của bạn:</h3>
+  <input type="text" id="studentName" placeholder="Nhập tên..." />
+  <button onclick="startQuiz()">Bắt đầu</button>
+</div>
+
+<!-- Phần hiển thị câu hỏi và đáp án -->
+<div id="quizArea" style="display:none;">
+  <div id="countdown">⏱️ Còn lại: —</div>
+  <img id="questionImage" src="" alt="Câu hỏi sẽ xuất hiện tại đây">
+  <div id="options">
+    <button>A</button>
+    <button>B</button>
+    <button>C</button>
+    <button>D</button>
+  </div>
+</div>
+
+<script>
+  // Cấu hình Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyB-ST5U4VSxraEGKl3INjGKKdl9Dik5bg0",
+    authDomain: "giaiphong2025-697c5.firebaseapp.com",
+    databaseURL: "https://giaiphong2025-697c5-default-rtdb.firebaseio.com",
+    projectId: "giaiphong2025-697c5",
+    storageBucket: "giaiphong2025-697c5.appspot.com",
+    messagingSenderId: "205746810625",
+    appId: "1:205746810625:web:ec05b354a6221f7b3af500"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
+
+  // Các phần tử giao diện
+  const imageEl = document.getElementById("questionImage");
+  const countdownEl = document.getElementById("countdown");
+  const buttons = document.querySelectorAll("#options button");
+  let currentQuestion = null;
+  let countdownInt = null;
+  let answerAllowed = false;
+
+  // Khi giáo viên gửi câu hỏi
+  db.ref("currentQuestion").on("value", snap => {
+    const val = snap.val();
+    if (!val) {
+      imageEl.src = "";
+      currentQuestion = null;
+      countdownEl.innerText = "⏱️ Còn lại: —";
+      disableButtons();
+      return;
+    }
+    const qn = val.number;
+    currentQuestion = qn;
+    imageEl.src = `./c${qn}.png`; // Đường dẫn ảnh theo số câu
+    startCountdown(30); // Bắt đầu đếm ngược
+  });
+
+  // Hàm đếm ngược
+  function startCountdown(sec) {
+    clearInterval(countdownInt);
+    let t = sec;
+    countdownEl.innerText = `⏱️ ${t}s`;
+    answerAllowed = true;
+    enableButtons();
+    countdownInt = setInterval(() => {
+      t--;
+      countdownEl.innerText = `⏱️ ${t}s`;
+      if (t <= 0) {
+        clearInterval(countdownInt);
+        countdownEl.innerText = "⏱️ 0s";
+        answerAllowed = false;
+        disableButtons();
+      }
+    }, 1000);
+  }
+
+  // Khi học sinh bấm chọn đáp án
+  buttons.forEach(b => {
+    b.onclick = () => {
+      if (!answerAllowed || !currentQuestion) return;
+      const ans = b.innerText;
+      const name = localStorage.getItem("name") || document.getElementById("studentName").value.trim();
+      if (name) {
+        localStorage.setItem("name", name);
+        db.ref("answers/" + name + "/cau" + currentQuestion).set(ans);
+        buttons.forEach(x => x.classList.remove("selected"));
+        b.classList.add("selected");
+      } else {
+        alert("Vui lòng nhập tên!");
+      }
+    };
+  });
+
+  // Hàm vô hiệu hóa các nút
+  function disableButtons() {
+    buttons.forEach(b => {
+      b.classList.add("disabled");
+      b.disabled = true;
+    });
+  }
+
+  // Hàm kích hoạt các nút
+  function enableButtons() {
+    buttons.forEach(b => {
+      b.classList.remove("disabled");
+      b.disabled = false;
+    });
+  }
+
+  // Hàm bắt đầu câu hỏi khi học sinh nhập tên
+  function startQuiz() {
+    const nameInput = document.getElementById("studentName").value.trim();
+    if (nameInput.length < 1) {
+      alert("Vui lòng nhập tên!");
+      return;
+    }
+    localStorage.setItem("name", nameInput);
+    document.getElementById("loginArea").style.display = "none";
+    document.getElementById("quizArea").style.display = "block";
+  }
+</script>
+
+</body>
+</html>
 
