--- a/teacher/index.html
+++ b/teacher/index.html
@@ -113,7 +113,9 @@
     curQ = n;
     db.ref("currentQuestion").set({number: n, ts: Date.now()});
     const padded = String(n).padStart(2, '0');
-  questionImage.src = `./images/c${padded}.png`; // Them ảnh
+  questionImage.src = `./images/C${padded}.png`; // Them ảnh
+  
+
     currentQEl.innerText = n;
     currentQ2El.innerText = n;
     resultsBody.innerHTML = `<tr><td colspan="3">Đang chờ học sinh...</td></tr>`;
