--- a/student/index.html
+++ b/student/index.html
@@ -133,7 +133,7 @@
     const qn = val.number;
     currentQuestion = qn;
    const padded = String(qn).padStart(2, '0');
-  imageEl.src = `./images/c${padded}.png`; // Đường dẫn ảnh
+  imageEl.src = `./images/C${padded}.png`; // Đường dẫn ảnh
     startCountdown(30);
     resetButtonSelection();
   });
