--- a/teacher/index.html
+++ b/teacher/index.html
@@ -196,7 +196,11 @@ function resetGame() {
 
 
 </script>
-
+<div style="margin-top: 20px;">
+  <button onclick="window.location.href='gioithieu.html';" style="padding: 10px 20px; font-size: 18px; background-color: #2196F3; color: white; border: none; border-radius: 8px; cursor: pointer;">
+    ℹ️ Giới thiệu
+  </button>
+</div>
 </body>
 </html>
 
