--- a/teacher/index.html
+++ b/teacher/index.html
@@ -196,9 +196,17 @@ function resetGame() {
 
 
 </script>
+<div style="margin-top: 20px;">
 <button onclick="window.open('gioithieu.html', '_blank');" style="padding: 10px 20px; font-size: 18px; background-color: #2196F3; color: white; border: none; border-radius: 8px; cursor: pointer;">
-  ℹ️ Giới thiệu
+  ℹ️ Giới thiệu 1
 </button>
+  <button onclick="window.open('gioithieu.html', '_blank');" style="padding: 10px 20px; font-size: 18px; background-color: #2196F3; color: white; border: none; border-radius: 8px; cursor: pointer;">
+  ℹ️ Giới thiệu 2
+</button>
+  <button onclick="window.open('gioithieu.html', '_blank');" style="padding: 10px 20px; font-size: 18px; background-color: #2196F3; color: white; border: none; border-radius: 8px; cursor: pointer;">
+  ℹ️ Giới thiệu 3
+</button>
+</div>
 
 </body>
 </html>
